new file parse system
insane speed improvements

--- a/public/ignore.cfg
+++ b/public/ignore.cfg
@@ -3,3 +3,10 @@ bin/game/options.txt
 bin/game/optionsof.txt
 bin/game/usercache.json
 bin/lastlogin.cfg
+bin/user_config.cfg
+bin/game/screenshots/
+bin/game/saves/
+bin/game/resourcepacks/
+bin/game/shaderpacks/
+bin/game/config/
+logs/
