--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "trxyy-s-alternative-api-nodejs-server",
-  "version": "1.0.0",
-  "description": "Trxyy's Alternative-Api nodejs download server",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
-    
-  },
-  "keywords": [
-    "download",
-    "trxyy",
-    "alternative-lib",
-    "minecraft",
-    "launcher",
-    "S-update",
-    "supdate"
-  ],
-  "author": "chaun14",
-  "license": "MIT",
-  "dependencies": {
-    "colors": "^1.4.0",
-    "express": "^4.17.1",
-    "md5-file": "^4.0.0",
-    "recursive-readdir-sync": "^1.0.6"
-  }
+    "name": "trxyy-s-alternative-api-nodejs-server",
+    "version": "1.0.0",
+    "description": "Trxyy's Alternative-Api nodejs download server",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js"
+    },
+    "keywords": [
+        "download",
+        "trxyy",
+        "alternative-lib",
+        "minecraft",
+        "launcher",
+        "S-update",
+        "supdate"
+    ],
+    "author": "chaun14",
+    "license": "MIT",
+    "dependencies": {
+        "chokidar": "^3.4.0",
+        "colors": "^1.4.0",
+        "express": "^4.17.1",
+        "md5-file": "^4.0.0"
+    }
 }
