--- a/public/delete.cfg
+++ b/public/delete.cfg
@@ -1,1 +1,3 @@
 libraries/com/google/guava/guava/15.0/guava-15.0.jar
+libraries/com/google/guava/guava/20.0/guava-20.0.jar
+libraries/com/google/guava/guava/21.0/guava-21.0.jar
